<?xml version="1.0" encoding="utf-8"?>


<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/et_first_name"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:layout_marginLeft="23dp"
        android:layout_marginStart="23dp"
        android:layout_marginRight="23dp"
        android:layout_marginEnd="23dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/first_name"
        android:paddingLeft="18dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        android:background="@drawable/edit_text_border"/>

    <EditText
        android:id="@+id/last_name"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:layout_marginLeft="23dp"
        android:layout_marginStart="23dp"
        android:layout_marginRight="23dp"
        android:layout_marginEnd="23dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/last_name"
        android:paddingLeft="18dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_first_name"
        android:background="@drawable/edit_text_border"/>

    <EditText
        android:id="@+id/dob"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:layout_marginLeft="23dp"
        android:layout_marginStart="23dp"
        android:layout_marginRight="23dp"
        android:layout_marginEnd="23dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/DOB"
        android:paddingLeft="18dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/last_name"
        android:background="@drawable/edit_text_border"/>

    <ImageButton
        android:id="@+id/calender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/small_calender"
        app:layout_constraintEnd_toEndOf="@+id/dob"
        app:layout_constraintBottom_toBottomOf="@+id/dob"
        app:layout_constraintTop_toTopOf="@+id/dob"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp" />

    <EditText
        android:id="@+id/et_address"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:layout_marginLeft="23dp"
        android:layout_marginStart="23dp"
        android:layout_marginRight="23dp"
        android:layout_marginEnd="23dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/address"
        android:paddingLeft="18dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dob"
        android:background="@drawable/edit_text_border"/>

    <TextView
        android:layout_marginTop="16dp"
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        app:layout_constraintTop_toBottomOf="@+id/et_address"
        android:layout_marginLeft="23dp"
        app:layout_constraintStart_toStartOf="parent"
        android:textAppearance="@style/EDText"/>

    <RadioGroup
        android:id="@+id/radio_grp_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gender">

        <RadioButton
            android:id="@+id/male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="22dp"
            android:text="@string/female" />

        <RadioButton
            android:id="@+id/unspecified"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="22dp"
            android:text="@string/unspecified" />

    </RadioGroup>

    <EditText
        android:id="@+id/last_seen"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:layout_marginLeft="23dp"
        android:layout_marginStart="23dp"
        android:layout_marginRight="23dp"
        android:layout_marginEnd="23dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/last_seen"
        android:paddingLeft="18dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radio_grp_gender"
        android:background="@drawable/edit_text_border"/>

    <EditText
        android:id="@+id/et_next_of_kin"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:layout_marginLeft="23dp"
        android:layout_marginStart="23dp"
        android:layout_marginRight="23dp"
        android:layout_marginEnd="23dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/next_of_kin"
        android:paddingLeft="18dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/last_seen"
        android:background="@drawable/edit_text_border"/>

    <EditText
        android:id="@+id/nok_contact"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:layout_marginLeft="23dp"
        android:layout_marginStart="23dp"
        android:layout_marginRight="23dp"
        android:layout_marginEnd="23dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/nok_contact"
        android:paddingLeft="18dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_next_of_kin"
        android:background="@drawable/edit_text_border"/>

    <EditText
        android:id="@+id/medicare"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:layout_marginLeft="23dp"
        android:layout_marginStart="23dp"
        android:layout_marginRight="23dp"
        android:layout_marginEnd="23dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/medicare"
        android:paddingLeft="18dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nok_contact"
        android:background="@drawable/edit_text_border"/>

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:text="@string/submit"
        android:background="@drawable/rounded_btn_next"
        android:textAppearance="@style/ButtonTitle"
        android:layout_marginBottom="28dp"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="64dp"
        android:layout_marginRight="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/medicare" />

</android.support.constraint.ConstraintLayout>
