<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/destination"
        android:textAppearance="@style/ToolBarText"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/choose_hospital_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/choose_hospital"
        android:textAppearance="@style/Title"
        app:layout_constraintBottom_toTopOf="@+id/choose_hospital"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <NumberPicker
        android:id="@+id/choose_hospital"
        android:layout_width="0dp"
        android:layout_height="195dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/edit_text_border"/>


    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:text="@string/next"
        android:background="@drawable/rounded_btn_next"
        android:textAppearance="@style/ButtonTitle"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="64dp"
        android:layout_marginRight="64dp"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <View
        android:layout_width="132dp"
        android:layout_height="5dp"
        android:background="#FF080808"
        android:layout_marginBottom="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>



</android.support.constraint.ConstraintLayout>